# hoisaai

./: .gitignore  README.md  autoencoder.py  pyproject.toml
hoisaai/layer_0/: dataframe.py  tensor.py
hoisaai/layer_1/: model.py  sample.py
hoisaai/layer_1/dataframe/: data_preprocessing.py  data_source.py
hoisaai/layer_1/datasource/: bloomberg.py
hoisaai/layer_1/learning_model/supervised/: linear.py  supervised.py
hoisaai/layer_1/learning_model/supervised/classification/: classification.py  decision_tree.py  k_nearest_neighbors.py  logistic_regression.py
hoisaai/layer_1/learning_model/supervised/core/: decision_tree.py  k_nearest_neighbors.py  linear.py
hoisaai/layer_1/learning_model/supervised/neural_network/: loss.py  module.py  optimizer.py
hoisaai/layer_1/learning_model/supervised/regression/: decision_tree.py  error.py  k_nearest_neighbors.py  linear.py  regression.py
hoisaai/layer_1/model/supervised/: supervised.py
hoisaai/layer_1/model/supervised/classification/: classification.py  decision_tree.py  (+2 more)
hoisaai/layer_1/preprocessing/: scaler.py
hoisaai/layer_2/: metric.py
hoisaai/lyaer_2/: metric.py  pipeline.py
leetcode/1 two sum/: 1.py
leetcode/2 Add Two Numbers/: 2.py
leetcode/3 Longest Substring Without Repeating Characters/: 3.py
leetcode/4 Median of Two Sorted Arrays/: 4.py
leetcode/5 Longest Palindromic Substring/: 5.py
leetcode/6 Zigzag Conversion/: 6.py
machine_learning/neural_network/: dataset.py  early_stopping.py  fully_connected_layer.py  loss.py  metric.py
test/layer_0/: test_dataframe.py  test_tensor.py
(+32 files in other folders)
